tests/baselines/reference/asyncArrowFunction6_es6.errors.txt
tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction6_es6.ts(2,27): error TS1109: Expression expected.


==== tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction6_es6.ts (1 errors) ====
    
    var foo = async (a = await): Promise<void> => {
                              ~
!!! error TS1109: Expression expected.
    }